--- a/browser-organ-example/app/views/pages/home.html
+++ b/browser-organ-example/app/views/pages/home.html
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-xs-12">
     
-    My number is {{main.myNumber}}
+    My number is {{main.myNumber.get()}}
 
     </div>
   </div>
